--- a/backend/package.json
+++ b/backend/package.json
@@ -25,3 +25,14 @@
     "nodemon": "^3.1.10"
   }
 }
+{
+  "name": "@screwyouikea/backend",
+  "version": "0.0.1",
+  "private": true,
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  }
+}
