API endpoints set up

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Google Gemini API key for server-side calls
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyCMy_lMqi3bSI_wgxvKNS-1hsVz00msDU8
 
 # MongoDB connection for local development
 MONGODB_URI=
